--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "crud",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,14 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AAGS589/CRUD_NodeJS.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AAGS589/CRUD_NodeJS/issues"
+  },
+  "homepage": "https://github.com/AAGS589/CRUD_NodeJS#readme",
+  "description": ""
 }
